--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals"],
-  "rules": {
-    "no-unused-vars": 0
-  }
+  "env": { "browser": true, "node": true, "es6": true },
+  "extends": ["eslint:recommended", "next/core-web-vitals"]
+  // "rules": {
+  //   "no-unused-vars": 0
+  // }
 }
